[package]
edition = "2018"
name = "rusty-blink"
version = "0.1.0"
required-features = ["clock_8_mhz"]


[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = {version = "0.7.0", features = ["device"]}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f0xx-hal = { version = "0.18", features = ["stm32f030x4", "rt"]}

static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
zerocopy = "0.8.14"
ringbuffer = { version= "0.15.0", default-features = false} # disable "alloc" making it non-std but statically allocable

[features]
default = [ "clock_8_mhz", "res_micro"]
clock_8_mhz = [] # what is the internal clock speed of the microcontroller
res_micro = [] # 1 microsecond resolution on the receiver
debug_recv = []